# Ansible-Docker-Vagrant

./: CMakeLists.txt  README.MD  build_loglinux.txt  dockerfile  dockerlog_linux.txt
sqlite-final/: README.MD  Vagrantfile  build_log_windows.txt  dockerplaybook.yml  readme.txt
sqlite-final/task8/: conanfile.py
task8/: CMakeLists.txt  conan_log.txt  main.cpp
